# lighterbird

./: .dev  .env.example  .gitignore  AGENTS.md  README.md  mem-2026-07-14-svelte5-effects.md  pyproject.toml
.github/workflows/: e2e.yml
.serena/: project.yml
.serena/memories/: imap-dns-validation-regression.md  multi-command-input.md  prompt-commands-feature.md  rag-writing-samples-design.md  svelte-warnings-fix.md
calendar/: AGENTS-calendar.md
contacts/: AGENTS-contacts.md
core/: AGENTS-core.md
email/: AGENTS-email.md
journal/: AGENTS-journal.md
letter/: AGENTS-letter.md
profiles/: AGENTS-profiles.md
reset/: AGENTS-reset.md
scripts/: AGENTS-scripts.md  test.sh
server/: AGENTS-server.md
src/lighterbird/: __init__.py  __main__.py
src/scripts/: seed_spam_tokens.py
tests/: AGENTS-tests.md  conftest.py  e2e_comprehensive.mjs  e2e_email_delete_send.mjs  e2e_email_folder.mjs  e2e_email_send.mjs  e2e_email_spam_buttons.mjs  e2e_email_tab_actions.mjs  e2e_folder_tab_enhancements.mjs  e2e_full.mjs  e2e_gui_smoke.mjs  e2e_helpers.mjs  e2e_toolbar_shortcuts_verify.mjs  playwright_e2e.mjs  seed_e2e_messages.py  test_e2e.py  test_reset.py
tests/test_calendar/: test_caldav.py  test_calendar.py  test_rrule.py
tests/test_contacts/: conftest.py  test_contacts.py  test_vcf.py
tests/test_core/: test_ai.py  test_backup.py  test_backup_coverage.py  test_backup_extra.py  test_backup_handler.py  test_backup_scheduler.py  test_config_defaults.py  test_cowrite_style.py  test_db.py  test_db_harden.py  test_drafts.py  test_keyring.py  test_priority.py  test_providers.py  test_storage.py  test_system_prompt.py
tests/test_email/: test_backlog.py  test_capabilities.py  test_email.py  test_flag_pull.py  test_folder_mapper.py  test_imap_client.py  test_imap_sync.py  test_imap_sync_extra.py  test_messages.py  test_msg_compose.py  test_msg_ops.py  test_phishing.py  test_server_detect.py  test_server_detect_extra.py  test_sieve_filters.py  test_sieve_manager.py  test_sieve_service.py  test_signatures_service.py  test_smtp.py  test_spam_detect.py  test_spam_similarity.py  test_uidvalidity.py  test_undo.py  test_writing_samples.py
tests/test_journal/: conftest.py  test_journal.py
tests/test_letter/: test_letter_services.py  test_letters.py
tests/test_llm/: test_llm_tools.py  test_tool_loop.py
tests/test_profiles/: test_services.py
tests/test_scripts/: test_dev_cli.py
tests/test_server/: test_command_uuid_source.py  test_cowrite.py  test_email_block_handlers.py  test_email_sieve_handlers.py  test_email_spam_handlers.py  test_email_undo_routes.py  test_export_import.py  test_handlers.py  test_helpers.py  test_interactive_form_mappings.py  test_letter_crud_handlers.py  test_llm_provider.py  test_middleware.py  test_parser.py  test_prompt_commands.py  test_render.py  test_render_utils.py  test_response.py  test_routes_admin.py  test_routes_calendar.py  test_routes_chat.py  test_routes_command.py  test_routes_contacts.py  test_routes_cowrite.py  test_routes_drafts.py  test_routes_email.py  test_routes_email_actions.py  test_routes_email_sieve.py  test_routes_email_spam.py  test_routes_journal.py  test_routes_letters.py  test_routes_llm.py  test_routes_profiles.py  test_routes_prompt_commands.py  test_routes_tags.py  test_routes_todo.py  test_server.py  test_sync_progress.py  test_sync_state.py  test_tasks.py  (+3 more)
tests/test_tags/: test_tags_service.py
tests/test_todo/: __init__.py  conftest.py  test_todo.py
todo/: AGENTS-todo.md
user_commands/: AGENTS-user-commands.md
web/: AGENTS-web.md  index.html  package-lock.json  package.json  playwright-letter-e2e.mjs  vite.config.js
(+370 files in other folders)
