[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lighterbird"
version = "0.2.0"
description = "Email, contacts, calendar, and todo — a command-driven PIM with built-in BYOK LLM"
authors = [{name = "Ron"}]
readme = "README.md"
license = "AGPL-3.0-only"
requires-python = ">=3.11"
dependencies = [
    "lightercore>=0.1.0",
    "cryptography>=42.0.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "httpx>=0.27.0",
    "openai>=1.12.0",
    "pydantic>=2.0.0",
    "keyring>=25.0.0",
    "dnspython>=2.6.0",
    "mistune>=3.3.2",
    "py7zr>=1.1.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.14.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.4.0",
]
pdf = [
    "fpdf2>=2.7.0",
]

[project.scripts]
lighterbird-dev = "lighterbird.scripts.dev_cli:dev_main"

[tool.hatch.build.targets.wheel]
packages = ["src/lighterbird"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "e2e: E2E browser tests (skipped by default; use --e2e to run)",
]

[tool.ruff.lint]
select = ["S110", "S112", "E", "F", "I"]
