[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lighterbird"
version = "0.2.0"
description = "Email, contacts, calendar, and todo — a command-driven PIM with built-in BYOK LLM"
authors = [{name = "Ron"}]
readme = "README.md"
license = "AGPL-3.0-only"
requires-python = ">=3.11"
dependencies = [
    "lightercore>=0.1.0",
    "cryptography>=42.0.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "httpx>=0.27.0",
    "openai>=1.12.0",
    "pydantic>=2.0.0",
    "keyring>=25.0.0",
    "dnspython>=2.6.0",
    "mistune>=3.3.2",
    "py7zr>=1.1.0",
    "pyyaml>=6.0",
    "python-dateutil>=2.8.0",
    "sqlite-vec>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.14.0",
    "pytest-asyncio>=0.24.0",
    "pytest-timeout>=2.3.0",
    "ruff>=0.4.0",
    "vobject>=0.9.0",
]
pdf = [
    "fpdf2>=2.7.0",
]
embed = [
    "fastembed>=0.8.0",
]

[project.scripts]
lighterbird-dev = "lighterbird.scripts.dev_cli:dev_main"

[tool.hatch.build.targets.wheel]
packages = ["src/lighterbird"]

[tool.uv.sources]
lightercore = { path = "../lightercore", editable = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "e2e: E2E browser tests (skipped by default; use --e2e to run)",
    "asyncio: async tests",
    "no_isolation: do not isolate data directory (test checks default paths)",
]
asyncio_mode = "auto"
timeout = 300

[tool.ruff.lint]
select = [
    "S110", "S112",    # flake8-bandit (security)
    "E", "F",          # pycodestyle + pyflakes
    "I",               # isort
    "B",               # flake8-bugbear
    "SIM",             # flake8-simplify
    "UP",              # pyupgrade
    "RUF",             # Ruff-specific
]
ignore = [
    "B008",            # do not perform function calls in argument defaults
    "B904",            # raise-without-from-inside-except (noisy, low value)
    "E501",            # line-too-long (pre-existing)
    "E741",            # ambiguous-variable-name (single-letter vars are fine)
    "RUF012",          # mutable class attributes
    "RUF059",          # unused-unpacked-variable (too noisy)
    "SIM105",          # suppressible-exception (sometimes pass is intentional)
    "SIM108",          # use ternary operator (prefer if/else for readability)
    "B017",            # assert-raises-exception (legitimate use in tests)
]
